# thc

./: README.md  pyproject.toml
data/processed/: train_tags.txt  train_text.txt  valid_tags.txt  valid_text.txt
logs/distilbert-fine-tuning/: events.out.tfevents.1601955970.1f08309b9023.1999.0
notebooks/: 00-texts-integrity.ipynb  01-train-valid-split.ipynb  10-distilbert.ipynb
references/: 10-distilbert-google-colab.ipynb
tests/: test_thc.py
thc/: arena.py  datasets.py  models.py  preprocessing.py  transforms.py
thc/utils/: constants.py  env.py
