[tool.poetry]
name = "thc"
version = "0.1.0"
description = "Classify harmful speech in Polish tweets"
authors = ["mrtovsky <mrtovsky@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
ipykernel = "^5.3.4"
transformers = "^3.3.1"
tqdm = "^4.50.0"
tensorboard = "^2.3.0"
emoji = "^0.6.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
